Update to new Java APIs